--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <artifactId>web_dnevnik</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <description>Test fedja</description>
 
 
 
